style.css
@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');


* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Fira Sans', serif;
}


:root {
    --primaryColor: #006a50;
    --roundedMd : 8px ;
    --roundedLg: 16px;
    --roundedXl: 24px;
    --paddingPrimary: 15px 30px;
    --whiteColor: #fff;
    --blackColor: #0e0e0e;
    --primaryBackground: rgb(198, 228, 214);
}

body {
 background: rgb(245, 245, 245);;
}

.outlinedBtn {
    border: 1px solid var(--primaryColor);
    padding:var(--paddingPrimary) ;
    color: var(--primaryColor);
    background-color: white;
    border-radius: var(--roundedMd) ;
    outline: none;
    font-size: 18px;
    font-weight: 600;
}

header   > nav{
    display: flex;
    align-items: center;
    justify-content: space-between;
    max-width: 1280px;
    /* padding: 24px 0px; */
    margin: 0 auto;
    height: 100px;

}

.logo {
    font-size: 2rem;
}

.heroSection {
    max-width: 1280px;
    margin: 0 auto;
    padding: 80px 100px;
    display: flex;
    align-items: center;
    gap: 16;
    background-color: var(--primaryBackground); 
    border-radius: var(--roundedLg);   
}

.heroContent {
    display: flex;
    flex-direction: column;
    gap: 24px;

}

.containedBtn {
    width: fit-content;
    background-color: var(--primaryColor);
    padding: var(--paddingPrimary);
    outline: none;
    border: none;
    border-radius: var(--roundedMd);
    color: var(--whiteColor);
    font-size: 18px;
    font-weight: 600;
    cursor: pointer;

}
.containedBtn:hover {
    background-color: rgb(9, 161, 92);
    transition: all 0.3s ease;
}
.heroTitle {
    font-size: 3.5rem;
}
.subTitle {
    color: var(--blackColor);
    opacity: 0.5;
    font-size: 24px;
    font-weight: 500;
}
.container {
    margin-top: 20px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 80px;
}

.container section {
    max-width: 1280px;
    display: flex !important;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 32px;
    
}
/* #pillersOfBd {
    display: flex;
    flex-direction: column;
    gap: 32px;
} */

.pillerContainer {
    display: flex;
    align-items: center;
    gap: 24px;
}

.pillerContainer div {
    padding: 24px;
    background-color: var(--whiteColor);
    border-radius: var(--roundedMd);
    display: flex;
    flex-direction: column;
    gap: 24px;
}

.heading {
    font-size: 40px;
    font-weight: 700;
}
.title {
    font-size: 20px;
    font-weight: 700;
}
.paragraph {
    color: var(--blackColor);
    opacity: 0.7;
}

.gap-32 {
    gap: 32px;
}
.gap-24 {
    gap: 24px;
}
.gap-12 {
    gap: 12px
}
.gap-4 {
    gap: 4px;
}
.flexColumn {
    display: flex;
    flex-direction: column;
}
.flex {
    display: flex;
}
.flexRowReverse {
    flex-direction: row-reverse;
}
.w-full {
    width: 100%;
}

.align-center {
    align-items: center;
}
.text-center {
    text-align: center;
}
.padding-32 {
    padding: 32px;
}
/* #Vision {
    display: flex !important;
    flex-direction: column;
    align-items: center;
   
} */


.bg-softBlue {
    background-color: rgba(84, 144, 245, 0.2) !important; 
}
.bg-softWhite {
    background-color: rgb(247, 235, 207) !important;
}
.bg-softGreen {
    background-color: rgb(198, 228, 214) !important; 
}
.bg-white {
    background-color: var(--whiteColor) !important;
}
.rounded-xl {
    border-radius: var(--roundedXl);
}
.relative {
    position: relative;
}

.qouteOfYunus {
    padding: 48px 24px;
    /* align-items: start; */
    background-color: var(--whiteColor);  
    border: 1px solid rgba(14, 14, 14, 0.15);
}


/* table> thead>  {
    display: flex;
    align-items: center;
    justify-content: space-between;
} */

#opinion {
    border: 1px solid black;
}

.newChannel {
    width: fit-content;
    object-fit: contain;
}
.sateliteImg {
    object-fit: cover;
    height: auto;
    border-radius: var(--roundedXl);
}

.donateMoney {
    padding: 40px;
    border-radius: var(--roundedLg);
    background-color: var(--whiteColor);
    font-size: 40px;
    font-weight: 700;
    color: var(--blackColor);
    opacity: 0.8;
    border: 1px solid rgba(14, 14, 14, 0.15);
}

.btnContainer {
    padding: 20px 40px;
    justify-content: center;
    cursor: pointer;
    width: 80%;
}
.btnContainer button {
    font-size: 20px;
    opacity: 0.3;
    outline: none;
    border: none;
}

#newslater {
    padding: 80px 100px;
}
.newslaterContainer {
    width: 60%;
}
.inputField {
    width: 100%;
    outline: none;
    border: none;
    padding: 18px 40px;
    border-radius: 8px 0px 0px 8px;
}

footer {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 32px;
    padding: 50px 160px;
    margin-top: 80px ;
}
footer > div{
    max-width: 1280px;
}

footer > h2 {
    font-size: 32px;
    font-weight: 700;
}
footer i {
    font-size: 24px;
}

